add start parameters for app and webapi